--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dilekcepro-groq-api",
+  "name": "dilekcepro-api",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "node-fetch": "^2.6.9"
   }
 }
